[package]
name = "plain"
version = "0.0.1"
authors = ["Jiri Zarevucky <zarevucky.jiri@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/randomites/plain"
homepage = "https://github.com/randomites/plain"
documentation = "https://docs.rs/plain"
description = "A small Rust library that allows users to reinterpret data of certain types safely."



